Initial support for Gradle 5: Fixing compatibility issues with plugins. Fixing broken Javadoc links. JAXB as library dependency instaed of platform module. Commented out Javafx-dependent sub-projects for Java 11/12 in settings.gradle.